Se realizo la creacion del header, su html y css completo

--- a/BragadoTvDuplicado/html/index.html
+++ b/BragadoTvDuplicado/html/index.html
@@ -4,9 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/BragadoTvDuplicado/css/index.css">
+    <title>Bragado Tv</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="parte-superior">
+            <div class="fecha-tiempo">
+                <p class="fecha"><span>Domingo 23 de agosto de 2023</span></p>
+                <div class="tiempo">
+                    <img src="../Recursos-para-paginas/nube.png" alt="nube" class="nube">
+                    <p class="time"> 7.7C| Bragado</p>
+                </div>
+            </div>
+            <div class="logo">
+                <img src="../Recursos-para-paginas/logoBragado.png" alt="Logo canal">
+            </div>
+            <div class="redes">
+                <ul class="lista-redes">
+                    <li class="dif-redes"><img class="logo-redes" src="../Recursos-para-paginas/iconoface.png" alt="icono red social" title="facebook"></li>
+                    <li class="dif-redes"><img class="logo-redes" src="../Recursos-para-paginas/icotwitter.png" alt="icono red social" title="facebook"></li>
+                    <li class="dif-redes"><img class="logo-redes" src="../Recursos-para-paginas/icoInsta.png" alt="icono red social" title="facebook"></li>
+                    <li class="dif-redes"><img class="logo-redes" src="../Recursos-para-paginas/lupa.png" alt="icono red social" title="facebook"></li>
+                </ul>
+            </div>
+        </div>
+        <nav class="nav">
+            <ul class="opc-nav">
+                <li class="opc">PORTADA</li>
+                <li class="opc">POLITICA</li>
+                <li class="opc">SOCIEDAD</li>
+                <li class="opc">CULTURA</li>
+                <li class="opc">DEPORTE</li>
+                <li class="opc">SEGURIDAD</li>
+                <li class="opc">REGIONALES</li>
+                <li class="opc tv">TV EN VIVO</li>
+                <li class="opc"><img class="img-b" src="../Recursos-para-paginas/lupa.png" alt="icono red social" title="facebook"></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
